--- a/dashboard.html
+++ b/dashboard.html
@@ -1,147 +1,131 @@
+
 <!DOCTYPE html>
 <html>
 <head>
   <title>Driver Dashboard</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
   
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
-  <script src="./js/app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+
+
+
+<script src="./js/app.js"></script>
+
 </head>
 <body>
-  <!-- Loader -->
-  <div class="loader-container" id="loader">
-    <div class="loader"></div>
-  </div>
 
-  <!-- Header -->
-  <div class="header">
-    <button class="menu-toggle" id="menuToggle">☰</button>
+   <!-- Add this at the top of the body -->
+<div class="loader-container" id="loader">
+    <div class="loader"></div>
+</div>
+
+<!-- Add overlay div (for mobile menu) -->
+<div class="overlay" id="overlay"></div>
+
+<!-- Add menu toggle button in your header/sidebar -->
+<button class="menu-toggle" id="menuToggle">☰</button>
+  
+  <div class="navbar">
     <div class="user-info">
       <div class="avatar"></div>
       <span id="driverName"></span>
     </div>
-  </div>
-
-  <!-- Main Content -->
-  <div class="main-content">
-    <div id="home" class="section active">
-      <h2>Pending Journeys</h2>
-      <div class="table-container">
-        <table id="pendingTable">
-          <thead>
-            <tr>
-              <th>Vehicle</th><th>Start Point</th><th>Start KM</th><th>Start Time</th><th>Action</th>
-            </tr>
-          </thead>
-          <tbody id="journeys-table-body">
-            <!-- Data will be inserted here by JavaScript -->
-          </tbody>
-        </table>
-      </div>
-    </div>
-
-    <div id="addJourney" class="section">
-      <h2>Start New Journey</h2>
-      <form id="journeyForm">
-        <select id="vehicleName" required onchange="updateVehicleNumber()">
-          <option value="">Select Vehicle</option>
-        </select>
-        <input type="text" id="vehicleNumber" placeholder="Vehicle Number" readonly required>
-        <input type="text" id="startPoint" placeholder="Starting Point" required>
-        <input type="number" id="startKm" placeholder="Starting KM" required>
-        <input type="time" id="startTime" required>
-        <input type="number" id="passengerCount" placeholder="No. of Passengers" required>
-        <input type="text" id="passengerName" placeholder="One Passenger Name" required>
-        <input type="tel" id="passengerPhone" placeholder="Passenger Phone (10-digits)" pattern="[0-9]{10}" required>
-        <button type="button" onclick="saveAsPending()">Save as Pending</button>
-      </form>
-    </div>
-
-    <div id="fuel" class="section">
-      <h2>Fuel Entry</h2>
-      <form id="fuelForm" enctype="multipart/form-data">
-        <select id="fuelVehicleName" required onchange="updateVehicleNumber()">
-          <option value="">Select Vehicle</option>
-        </select>
-        <input type="text" id="fuelVehicleNumber" placeholder="Vehicle Number" readonly required>
-        <input type="date" id="fuelDate" required>
-        <input type="text" id="fuelInvoiceNumber" placeholder="Invoice Number" required>
-        <select id="fuelType" required>
-          <option value="">Select Fuel Type</option>
-          <option value="Petrol">Petrol</option>
-          <option value="Diesel">Diesel</option>
-          <option value="CNG">CNG</option>
-          <option value="Electric">Electric</option>
-        </select>
-        <input type="number" id="fuelAmount" placeholder="Amount" step="0.01" required>
-        <input type="number" id="fuelLiters" placeholder="Liters" step="0.01" required>
-        <input type="number" id="fuelCurrentKm" placeholder="Current KM" required>
-        <input type="file" id="fuelBillImage" accept="image/*" required>
-        <button type="button" onclick="submitFuelEntry()">Submit Fuel Entry</button>
-      </form>
-    </div>
-
-    <div id="history" class="section">
-      <h2>Journey History</h2>
-      <div class="table-container">
-        <table id="completedTripsTable">
-          <thead>
-            <tr>
-              <th>Travel ID</th>
-              <th>Date</th>
-              <th>Vehicle</th>
-              <th>Start Point</th>
-              <th>End Point</th>
-              <th>Start KM</th>
-              <th>End KM</th>
-              <th>Passengers</th>
-            </tr>
-          </thead>
-          <tbody></tbody>
-        </table>
-      </div>
+    <div class="menu">
+      <button onclick="showSection('home')">Home</button>
+      <!-- <button onclick="showSection('addJourney')">Add Journey</button> -->
+      <button onclick="showSection('fuel')">Fuel</button>
+      <button onclick="showSection('history')">Journey</button>
+      <button onclick="logout()">Logout</button>
     </div>
   </div>
 
-  <!-- Mobile Bottom Navigation -->
-  <div class="mobile-bottom-nav">
-    <a href="#" onclick="showSection('home')" class="mobile-nav-item active">
-      <span class="material-symbols-outlined">home</span>
-      <span class="mobile-nav-text">Home</span>
-    </a>
-    <a href="#" onclick="showSection('fuel')" class="mobile-nav-item">
-      <span class="material-symbols-outlined">local_gas_station</span>
-      <span class="mobile-nav-text">Fuel</span>
-    </a>
-    <a href="#" onclick="showSection('history')" class="mobile-nav-item">
-      <span class="material-symbols-outlined">history</span>
-      <span class="mobile-nav-text">History</span>
-    </a>
-    <a href="#" onclick="logout()" class="mobile-nav-item">
-      <span class="material-symbols-outlined">logout</span>
-      <span class="mobile-nav-text">Logout</span>
-    </a>
+  <div id="home" class="section active">
+    <h2>Pending Journeys</h2>
+    <table id="pendingTable">
+      <thead>
+        <tr>
+          <th>Vehicle</th><th>Start Point</th><th>Start KM</th><th>Start Time</th><th>Action</th>
+        </tr>
+      </thead>
+      <tbody id="journeys-table-body">
+        <!-- Data will be inserted here by JavaScript -->
+    </tbody>
+    </table>
   </div>
 
-  <!-- Floating Add Button -->
-  <button id="addJourneyBtn" class="fab" onclick="showSection('addJourney')">
-    <span>＋</span>
-  </button>
-
-  <!-- Custom Popup -->
-  <div class="popup-overlay" id="customPopup">
-    <div class="popup-container">
-      <button class="popup-close" id="popupClose">&times;</button>
-      <h3 class="popup-title" id="popupTitle">Message</h3>
-      <div class="popup-message" id="popupMessage"></div>
-      <div class="popup-buttons">
-        <button class="popup-button" id="popupOk">OK</button>
-      </div>
-    </div>
+  <div id="addJourney" class="section">
+    <h2>Start New Journey</h2>
+    <form id="journeyForm">
+      <select id="vehicleName" required onchange="updateVehicleNumber()">
+        <option value="">Select Vehicle</option>
+      </select>
+     <input type="text" id="vehicleNumber" placeholder="Vehicle Number" readonly required>
+      <input type="text" id="startPoint" placeholder="Starting Point" required>
+      <input type="number" id="startKm" placeholder="Starting KM" required>
+      <input type="time" id="startTime" required>
+      <input type="number" id="passengerCount" placeholder="No. of Passengers" required>
+      <input type="text" id="passengerName" placeholder="One Passenger Name" required>
+      <input type="tel" id="passengerPhone" placeholder="Passenger Phone (10-digits)" pattern="[0-9]{10}" required>
+      <button type="button" onclick="saveAsPending()">Save as Pending</button>
+    </form>
   </div>
+
+
+  <!-- Add the Fuel section after the History section -->
+<div id="fuel" class="section">
+  <h2>Fuel Entry</h2>
+  <form id="fuelForm" enctype="multipart/form-data">
+     <select id="fuelVehicleName" required onchange="updateVehicleNumber()">
+        <option value="">Select Vehicle</option>
+      </select>
+     <input type="text" id="fuelVehicleNumber" placeholder="Vehicle Number" readonly required>
+    <input type="date" id="fuelDate" required>
+    <input type="text" id="fuelInvoiceNumber" placeholder="Invoice Number" required>
+    <select id="fuelType" required>
+      <option value="">Select Fuel Type</option>
+      <option value="Petrol">Petrol</option>
+      <option value="Diesel">Diesel</option>
+      <option value="CNG">CNG</option>
+      <option value="Electric">Electric</option>
+    </select>
+    <input type="number" id="fuelAmount" placeholder="Amount" step="0.01" required>
+    <input type="number" id="fuelLiters" placeholder="Liters" step="0.01" required>
+    <input type="number" id="fuelCurrentKm" placeholder="Current KM" required>
+    <input type="file" id="fuelBillImage" accept="image/*" required>
+    <button type="button" onclick="submitFuelEntry()">Submit Fuel Entry</button>
+  </form>
+</div>
+
+ <div id="history" class="section">
+  <h2>Journey History</h2>
+  <table id="completedTripsTable">
+    <thead>
+      <tr>
+        <th>Travel ID</th>
+        <th>Date</th>
+        <th>Vehicle Number</th>
+        <th>Vehicle Name</th>
+        <th>Start Point</th>
+        <th>End Point</th>
+        <th>Start KM</th>
+        <th>End KM</th>
+        <th>Start Time</th>
+        <th>End Time</th>
+        <th>Passenger Count</th>
+        <th>Passenger Name</th>
+        <th>Passenger Phone</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+
+   <!-- Floating Add Button -->
+<button id="addJourneyBtn" class="fab">
+  <span>＋</span>
+</button>
+
+</div>
 
   <script src="js/app.js"></script>
   
@@ -738,6 +722,18 @@ function showPopup(title, message) {
   
 </script>
 
+
+  <!-- Custom Popup Structure -->
+<div class="popup-overlay" id="customPopup">
+  <div class="popup-container">
+    <button class="popup-close" id="popupClose">&times;</button>
+    <h3 class="popup-title" id="popupTitle">Message</h3>
+    <div class="popup-message" id="popupMessage"></div>
+    <div class="popup-buttons">
+      <button class="popup-button" id="popupOk">OK</button>
+    </div>
+  </div>
+</div>
   
 </body>
 </html>
