--- a/dashboard.html
+++ b/dashboard.html
@@ -20,25 +20,47 @@
     <div class="loader"></div>
 </div>
 
-<!-- Add overlay div (for mobile menu) -->
-<div class="overlay" id="overlay"></div>
-
-<!-- Add menu toggle button in your header/sidebar -->
-<button class="menu-toggle" id="menuToggle">☰</button>
-  
-  <div class="navbar">
-    <div class="user-info">
-      <div class="avatar"></div>
-      <span id="driverName"></span>
-    </div>
-    <div class="menu">
-      <button onclick="showSection('home')">Home</button>
-      <!-- <button onclick="showSection('addJourney')">Add Journey</button> -->
-      <button onclick="showSection('fuel')">Fuel</button>
-      <button onclick="showSection('history')">Journey</button>
-      <button onclick="logout()">Logout</button>
-    </div>
+<!-- Replace your existing navbar with this navigation rail -->
+<div class="nav-rail">
+  <div class="nav-header">
+    <button class="nav-toggle" id="navToggle">
+      <span class="material-symbols-outlined">menu</span>
+    </button>
   </div>
+  
+  <nav class="nav-menu">
+    <ul>
+      <li>
+        <a href="#" onclick="showSection('home')" class="nav-item active">
+          <span class="material-symbols-outlined">home</span>
+          <span class="nav-text">Home</span>
+        </a>
+      </li>
+      <li>
+        <a href="#" onclick="showSection('fuel')" class="nav-item">
+          <span class="material-symbols-outlined">local_gas_station</span>
+          <span class="nav-text">Fuel</span>
+        </a>
+      </li>
+      <li>
+        <a href="#" onclick="showSection('history')" class="nav-item">
+          <span class="material-symbols-outlined">history</span>
+          <span class="nav-text">History</span>
+        </a>
+      </li>
+      <li>
+        <a href="#" onclick="logout()" class="nav-item">
+          <span class="material-symbols-outlined">logout</span>
+          <span class="nav-text">Logout</span>
+        </a>
+      </li>
+    </ul>
+  </nav>
+</div>
+
+<!-- Add this overlay for mobile -->
+<div class="nav-overlay" id="navOverlay"></div>
+<div class="main-content">
 
   <div id="home" class="section active">
     <h2>Pending Journeys</h2>
@@ -127,6 +149,7 @@
 
 </div>
 
+</div>
   <script src="js/app.js"></script>
   
 <script>
