--- a/dashboard.html
+++ b/dashboard.html
@@ -23,6 +23,10 @@
 <!-- Replace your existing navbar with this navigation rail -->
 <div class="nav-rail">
   <div class="nav-header">
+    <div class="user-info">
+      <div class="avatar"></div>
+      <span id="driverName"></span>
+    </div>
     <button class="nav-toggle" id="navToggle">
       <span class="material-symbols-outlined">menu</span>
     </button>
