--- a/dashboard.html
+++ b/dashboard.html
@@ -130,7 +130,8 @@
 
  <div id="history" class="section">
   <h2>Journey History</h2>
-  <table id="completedTripsTable">
+   <div class="table-wrapper">
+  <table class="fl-table" id="completedTripsTable">
     <thead>
       <tr>
         <th>Travel ID</th>
@@ -150,7 +151,7 @@
     </thead>
     <tbody></tbody>
   </table>
-
+   </div>
    <!-- Floating Add Button -->
 <button id="addJourneyBtn" class="fab">
   <span>＋</span>
