--- a/dashboard.html
+++ b/dashboard.html
@@ -84,7 +84,7 @@
     </tbody>
     </table>
   </div>
-
+  </div>
   <div id="addJourney" class="section">
     <h2>Start New Journey</h2>
     <form id="journeyForm">
