--- a/dashboard.html
+++ b/dashboard.html
@@ -285,14 +285,25 @@ document.addEventListener('DOMContentLoaded', function() {
             overlay.classList.remove('active');
         });
     }
-
+    let loaderMinimumTime = 500; // 500ms minimum show time
+    let loaderShownTime;
     // Loader functions
     window.showLoader = function() {
+        loaderShownTime = Date.now();
         document.getElementById('loader').style.display = 'flex';
     };
 
     window.hideLoader = function() {
+        const elapsed = Date.now() - loaderShownTime;
+    const remaining = loaderMinimumTime - elapsed;
+    
+    if (remaining > 0) {
+        setTimeout(() => {
+            document.getElementById('loader').style.display = 'none';
+        }, remaining);
+    } else {
         document.getElementById('loader').style.display = 'none';
+    }
     };
 
     // Show loader on initial page load
