--- a/dashboard.html
+++ b/dashboard.html
@@ -308,7 +308,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
     // Show loader on initial page load
     showLoader();
-    window.addEventListener('load', hideLoader);
+   // window.addEventListener('load', hideLoader);
 
 
   const driverId= driverData.id;
