--- a/dashboard.html
+++ b/dashboard.html
@@ -4,7 +4,7 @@
 <head>
   <title>Driver Dashboard</title>
   <link rel="stylesheet" href="css/style.css" />
-  
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
