--- a/dashboard.html
+++ b/dashboard.html
@@ -20,7 +20,7 @@
     <div class="loader"></div>
 </div>
 
-<!-- Replace your existing navbar with  navigation rail -->
+<!-- Replace your existing navbar   navigation rail -->
 <div class="nav-rail">
   <div class="nav-header">
     <div class="user-info">
