--- a/dashboard.html
+++ b/dashboard.html
@@ -48,7 +48,7 @@
     </li>
     <li>
       <a href="#" onclick="event.preventDefault(); showSection('history')" class="nav-item">
-        <span class="material-symbols-outlined">history</span>
+        <span class="material-symbols-outlined">directions_car</span>
         <span class="nav-text">History</span>
       </a>
     </li>
