--- a/dashboard.html
+++ b/dashboard.html
@@ -52,13 +52,16 @@
         <span class="nav-text">History</span>
       </a>
     </li>
-    <li>
-      <a href="#" onclick="logout()" class="nav-item">
-        <span class="material-symbols-outlined">logout</span>
-        <span class="nav-text">Logout</span>
-      </a>
-    </li>
   </ul>
+
+    <!-- Add this div for the logout button at the bottom -->
+  <div class="nav-footer">
+    <a href="#" onclick="logout()" class="nav-item">
+      <span class="material-symbols-outlined">logout</span>
+      <span class="nav-text">Logout</span>
+    </a>
+  </div>
+   
 </nav>
 </div>
 
