--- a/dashboard.html
+++ b/dashboard.html
@@ -98,7 +98,7 @@
     <a href="#" onclick="event.preventDefault(); showSection('addJourney')" class="fab-action">
       <span class="material-symbols-outlined">directions_car</span>
     </a>
-    <a href="#" onclick="event.preventDefault(); showSection('fuel')" class="fab-action">
+    <a href="#" onclick="event.preventDefault(); showAddFuelForm()" class="fab-action">
       <span class="material-symbols-outlined">local_gas_station</span>
     </a>
   </div>
