--- a/dashboard.html
+++ b/dashboard.html
@@ -479,7 +479,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
 
 function showAddFuelForm() {
- / Hide all sections first
+// Hide all sections first
   document.querySelectorAll('.section').forEach(section => {
     section.classList.remove('active');
   });
