--- a/dashboard.html
+++ b/dashboard.html
@@ -147,7 +147,7 @@
   
 
   
-  <div id="addFuelForm" class="section" style="display: none;">
+  <div id="addFuelForm" class="section">
     <h3>Add New Fuel Entry</h3>
     <form id="fuelForm" enctype="multipart/form-data">
       <select id="fuelVehicleName" required onchange="updateFuelVehicleNumber()">
