--- a/dashboard.html
+++ b/dashboard.html
@@ -105,6 +105,7 @@
 </div>
     
   </div>
+  
   <div id="addJourney" class="section">
     <h2>Start New Journey</h2>
     <form id="journeyForm">
@@ -144,6 +145,22 @@
       </tbody>
     </table>
   </div>
+
+   <div class="fab-wrapper">
+  <input type="checkbox" id="fabToggle" />
+  <div class="fab">
+    <span class="plus-icon">＋</span>
+  </div>
+  <div class="fab-actions">
+    <a href="#" onclick="event.preventDefault(); showSection('addJourney')" class="fab-action">
+      <span class="material-symbols-outlined">directions_car</span>
+    </a>
+    <a href="#" onclick="event.preventDefault(); event.stopPropagation(); showSection('addFuelForm');" class="fab-action">
+      <span class="material-symbols-outlined">local_gas_station</span>
+    </a>
+  </div>
+</div>
+   
   </div>
 
   
@@ -199,7 +216,21 @@
     <tbody></tbody>
   </table>
    </div>
-  
+
+   <div class="fab-wrapper">
+  <input type="checkbox" id="fabToggle" />
+  <div class="fab">
+    <span class="plus-icon">＋</span>
+  </div>
+  <div class="fab-actions">
+    <a href="#" onclick="event.preventDefault(); showSection('addJourney')" class="fab-action">
+      <span class="material-symbols-outlined">directions_car</span>
+    </a>
+    <a href="#" onclick="event.preventDefault(); event.stopPropagation(); showSection('addFuelForm');" class="fab-action">
+      <span class="material-symbols-outlined">local_gas_station</span>
+    </a>
+  </div>
+</div>
 
 </div>
 
