--- a/index.html
+++ b/index.html
@@ -1,69 +1,312 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Travel Log Login</title>
   <link rel="stylesheet" href="./css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
 
   <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+  <style>
+/* Travel Log Login Styles */
+body {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  font-family: 'Jost', sans-serif;
+  background: 
+    linear-gradient(rgba(0, 0, 0, 0.5), 
+    url('https://images.unsplash.com/photo-1501785888041-af3ef285b470?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80') no-repeat center center fixed;
+  background-size: cover;
+  background-blend-mode: darken;
+}
+
+.main {
+  width: 400px;
+  height: 600px;
+  overflow: hidden;
+  background: linear-gradient(135deg, #e0f7fa, #b2ebf2, #80deea);
+  border-radius: 15px;
+  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.3);
+  position: relative;
+}
+
+#chk {
+  display: none;
+}
+
+.signup, .login {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+label {
+  color: #00796b;
+  font-size: 2.3em;
+  justify-content: center;
+  display: flex;
+  margin: 30px 0 20px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: .5s ease-in-out;
+}
+
+input {
+  width: 70%;
+  height: 20px;
+  background: #f5f5f5;
+  justify-content: center;
+  display: flex;
+  margin: 15px auto;
+  padding: 12px;
+  border: none;
+  outline: none;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease;
+}
+
+input:focus {
+  background: #fff;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+}
+
+button {
+  width: 70%;
+  height: 45px;
+  margin: 15px auto;
+  justify-content: center;
+  display: block;
+  color: #fff;
+  background: #00796b;
+  font-size: 1em;
+  font-weight: bold;
+  outline: none;
+  border: none;
+  border-radius: 8px;
+  transition: all 0.2s ease;
+  cursor: pointer;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+button:hover {
+  background: #00897b;
+  transform: translateY(-2px);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+}
+
+.login {
+  height: 500px;
+  background: #fff;
+  border-radius: 60% / 10%;
+  transform: translateY(-180px);
+  transition: .8s ease-in-out;
+  box-shadow: 0 -10px 20px rgba(0, 0, 0, 0.1);
+}
+
+.login label {
+  color: #00796b;
+  transform: scale(.6);
+  margin: 40px 0 15px;
+}
+
+#chk:checked ~ .login {
+  transform: translateY(-600px);
+}
+
+#chk:checked ~ .login label {
+  transform: scale(1);	
+}
+
+#chk:checked ~ .signup label {
+  transform: scale(.6);
+}
+
+/* Social Login Styles */
+.social-login {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.social-login p {
+  color: #757575;
+  margin: 15px 0;
+  position: relative;
+}
+
+.social-login p::before,
+.social-login p::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  width: 30%;
+  height: 1px;
+  background: #e0e0e0;
+}
+
+.social-login p::before {
+  left: 0;
+}
+
+.social-login p::after {
+  right: 0;
+}
+
+.social-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+  margin-top: 10px;
+}
+
+.social-buttons button {
+  width: 120px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  margin: 0;
+}
+
+.google-btn {
+  background: #4285F4;
+}
+
+.google-btn:hover {
+  background: #357ae8;
+}
+
+.phone-btn {
+  background: #34a853;
+}
+
+.phone-btn:hover {
+  background: #2d8e47;
+}
+
+/* Phone Login Container */
+.phone-login-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.95);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
+  z-index: 10;
+}
+
+.phone-login-content {
+  width: 80%;
+  text-align: center;
+}
+
+.phone-login-content h3 {
+  color: #00796b;
+  margin-bottom: 25px;
+}
+
+.back-btn {
+  background: #f44336;
+  margin-top: 20px;
+}
+
+.back-btn:hover {
+  background: #d32f2f;
+}
+
+/* Hidden class */
+.hidden {
+  display: none;
+}
+
+/* Responsive adjustments */
+@media (max-width: 480px) {
+  .main {
+    width: 90%;
+    height: 550px;
+  }
+  
+  input, button {
+    width: 80%;
+  }
+  
+  .social-buttons {
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .social-buttons button {
+    width: 80%;
+  }
+}
+
+
+</style>
 </head>
 <body>
-   <div class="container">
-    <h1>Welcome to Travel Log</h1>
-    
-    <!-- Login/Signup Toggle -->
-    <div class="auth-toggle">
-      <button id="loginTab" class="active" onclick="showLogin()">Login</button>
-      <button id="signupTab" onclick="showSignup()">Sign Up</button>
+  <div class="main">  	
+    <input type="checkbox" id="chk" aria-hidden="true">
+
+    <div class="signup">
+      <form id="signupForm">
+        <label for="chk" aria-hidden="true">Sign up</label>
+        <input type="text" id="signupFirstName" placeholder="First Name" required>
+        <input type="text" id="signupLastName" placeholder="Last Name" required>
+        <input type="text" id="signupPhone" placeholder="Phone Number (+91...)" required>
+        <input type="text" id="signupUsername" placeholder="Username" required>
+        <input type="password" id="signupPassword" placeholder="Password" required>
+        <input type="password" id="signupConfirmPassword" placeholder="Confirm Password" required>
+        <button type="button" onclick="signupUser()">Sign up</button>
+      </form>
     </div>
 
-    <!-- Login Form -->
-    <div id="loginSection">
-      <p>Please login to continue</p>
+    <div class="login">
+      <form id="loginForm">
+        <label for="chk" aria-hidden="true">Login</label>
+        <input type="text" id="usernameInput" placeholder="Username" required>
+        <input type="password" id="passwordInput" placeholder="Password" required>
+        <button type="button" onclick="checkClassicLogin()">Login</button>
+        
+        <div class="social-login">
+          <p>OR</p>
+          <div class="social-buttons">
+            <button type="button" class="google-btn" onclick="signInWithGoogle()">
+              <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0z"></path><path d="M12 8v8l3-3-3-3z"></path></svg>
+              Google
+            </button>
+            <button type="button" class="phone-btn" onclick="showPhoneLogin()">
+              <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path></svg>
+              Phone
+            </button>
+          </div>
+        </div>
+      </form>
+    </div>
 
-      <!-- Classic Username/Password Login -->
-      <div id="classicLogin">
-        <input type="text" id="usernameInput" placeholder="Username">
-        <input type="password" id="passwordInput" placeholder="Password">
-        <button onclick="checkClassicLogin()">Login</button>
-      </div>
-
-      <p>OR</p>
-
-      <!-- Login Buttons -->
-      <div id="loginOptions">
-        <button onclick="showGoogleLogin()">Login with Google</button>
-        <button onclick="showPhoneLogin()">Login with Phone Number</button>
-      </div>
-
-      <!-- Google Sign-in -->
-      <div id="googleLogin" class="hidden">
-        <button onclick="signInWithGoogle()">Sign in with Google</button>
-      </div>
-
-      <!-- Phone Login -->
-      <div id="phoneLogin" class="hidden">
-        <input type="text" id="phoneNumber" placeholder="Enter phone number (+91...)">
+    <!-- Phone Login Section (hidden by default) -->
+    <div id="phoneLogin" class="phone-login-container hidden">
+      <div class="phone-login-content">
+        <h3>Phone Login</h3>
+        <input type="text" id="phoneNumber" placeholder="Enter phone number (+91...)" required>
         <div id="recaptcha-container"></div>
-        <button onclick="sendOTP()">Send OTP</button>
-        <input type="text" id="otp" placeholder="Enter OTP">
-        <button onclick="verifyOTP()">Verify OTP</button>
-      </div>
-    </div>
-
-    <!-- Signup Form -->
-    <div id="signupSection" class="hidden">
-      <div id="signupForm">
-        <input type="text" id="signupFirstName" placeholder="First Name">
-        <input type="text" id="signupLastName" placeholder="Last Name">
-        <input type="text" id="signupPhone" placeholder="Phone Number (+91...)">
-        <input type="text" id="signupUsername" placeholder="Username">
-        <input type="password" id="signupPassword" placeholder="Password">
-        <input type="password" id="signupConfirmPassword" placeholder="Confirm Password">
-        <button onclick="signupUser()">Sign Up</button>
+        <button type="button" onclick="sendOTP()">Send OTP</button>
+        <input type="text" id="otp" placeholder="Enter OTP" class="hidden">
+        <button type="button" onclick="verifyOTP()" class="hidden">Verify OTP</button>
+        <button type="button" class="back-btn" onclick="hidePhoneLogin()">Back to Login</button>
       </div>
     </div>
   </div>
