--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
   <style>
-/* Login/Signup Form Styles */
+/* Login/Signup  Styles */
 .container {
   width: 350px;
   height: 500px;
