--- a/index.html
+++ b/index.html
@@ -10,164 +10,126 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
   <style>
-body {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  font-family: 'Jost', sans-serif;
-  background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e);
+    body{
+	margin: 0;
+	padding: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-height: 100vh;
+	font-family: 'Jost', sans-serif;
+	background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e);
+}
+.main{
+	width: 350px;
+	height: 500px;
+	background: red;
+	overflow: hidden;
+	background: url("https://doc-08-2c-docs.googleusercontent.com/docs/securesc/68c90smiglihng9534mvqmq1946dmis5/fo0picsp1nhiucmc0l25s29respgpr4j/1631524275000/03522360960922298374/03522360960922298374/1Sx0jhdpEpnNIydS4rnN4kHSJtU1EyWka?e=view&authuser=0&nonce=gcrocepgbb17m&user=03522360960922298374&hash=tfhgbs86ka6divo3llbvp93mg4csvb38") no-repeat center/ cover;
+	border-radius: 10px;
+	box-shadow: 5px 20px 50px #000;
+}
+#chk{
+	display: none;
+}
+.signup{
+	position: relative;
+	width:100%;
+	height: 100%;
+}
+label{
+	color: #fff;
+	font-size: 2.3em;
+	justify-content: center;
+	display: flex;
+	margin: 50px;
+	font-weight: bold;
+	cursor: pointer;
+	transition: .5s ease-in-out;
+}
+input{
+	width: 60%;
+	height: 10px;
+	background: #e0dede;
+	justify-content: center;
+	display: flex;
+	margin: 20px auto;
+	padding: 12px;
+	border: none;
+	outline: none;
+	border-radius: 5px;
+}
+button{
+	width: 60%;
+	height: 40px;
+	margin: 10px auto;
+	justify-content: center;
+	display: block;
+	color: #fff;
+	background: #573b8a;
+	font-size: 1em;
+	font-weight: bold;
+	margin-top: 30px;
+	outline: none;
+	border: none;
+	border-radius: 5px;
+	transition: .2s ease-in;
+	cursor: pointer;
+}
+button:hover{
+	background: #6d44b8;
+}
+.login{
+	height: 460px;
+	background: #eee;
+	border-radius: 60% / 10%;
+	transform: translateY(-180px);
+	transition: .8s ease-in-out;
+}
+.login label{
+	color: #573b8a;
+	transform: scale(.6);
 }
 
-.main {
-  width: 350px;
-  height: 500px;
-  overflow: hidden;
-  background: url("https://doc-08-2c-docs.googleusercontent.com/docs/securesc/68c90smiglihng9534mvqmq1946dmis5/fo0picsp1nhiucmc0l25s29respgpr4j/1631524275000/03522360960922298374/03522360960922298374/1Sx0jhdpEpnNIydS4rnN4kHSJtU1EyWka?e=view&authuser=0&nonce=gcrocepgbb17m&user=03522360960922298374&hash=tfhgbs86ka6divo3llbvp93mg4csvb38") no-repeat center/cover;
-  border-radius: 10px;
-  box-shadow: 5px 20px 50px #000;
-  position: relative;
+#chk:checked ~ .login{
+	transform: translateY(-500px);
+}
+#chk:checked ~ .login label{
+	transform: scale(1);	
+}
+#chk:checked ~ .signup label{
+	transform: scale(.6);
 }
 
-#chk {
-  display: none;
-}
-
-.signup, .login {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  transition: .8s ease-in-out;
-}
-
-label {
-  color: #fff;
-  font-size: 2.3em;
-  display: flex;
-  justify-content: center;
-  margin: 50px;
-  font-weight: bold;
-  cursor: pointer;
-  transition: .5s ease-in-out;
-}
-
-input {
-  width: 60%;
-  height: 10px;
-  background: #e0dede;
-  display: flex;
-  margin: 20px auto;
-  padding: 12px;
-  border: none;
-  outline: none;
-  border-radius: 5px;
-}
-
-button {
-  width: 60%;
-  height: 40px;
-  margin: 10px auto;
-  display: block;
-  color: #fff;
-  background: #573b8a;
-  font-size: 1em;
-  font-weight: bold;
-  margin-top: 30px;
-  outline: none;
-  border: none;
-  border-radius: 5px;
-  transition: .2s ease-in;
-  cursor: pointer;
-}
-
-button:hover {
-  background: #6d44b8;
-}
-
-.login {
-  background: #eee;
-  border-radius: 60% / 10%;
-  transform: translateY(0);
-  z-index: 1;
-}
-
-.login label {
-  color: #573b8a;
-  transform: scale(0.6);
-}
-
-#chk:checked ~ .login {
-  transform: translateY(-500px);
-}
-
-#chk:checked ~ .login label {
-  transform: scale(1);
-}
-
-#chk:checked ~ .signup label {
-  transform: scale(0.6);
-}
-
-
-</style>
+  </style>
 </head>
 <body>
-  <div class="main">  	
-    <input type="checkbox" id="chk" aria-hidden="true">
+    <div class="main">  	
+		<input type="checkbox" id="chk" aria-hidden="true">
 
-    <div class="signup">
-      <form id="signupForm">
-        <label for="chk" aria-hidden="true">Sign up</label>
-        <input type="text" id="signupFirstName" placeholder="First Name" required>
-        <input type="text" id="signupLastName" placeholder="Last Name" required>
-        <input type="text" id="signupPhone" placeholder="Phone Number (+91...)" required>
-        <input type="text" id="signupUsername" placeholder="Username" required>
+			<div class="signup">
+				<form  id="signupForm">
+					<label for="chk" aria-hidden="true">Sign up</label>
+					<input type="text" id="signupFirstName" placeholder="First Name" required>
+					<input type="text" id="signupLastName" placeholder="Last Name" required>
+          <input type="text" id="signupPhone" placeholder="Phone Number (+91...)" required>
+					 <input type="text" id="signupUsername" placeholder="Username" required>
         <input type="password" id="signupPassword" placeholder="Password" required>
         <input type="password" id="signupConfirmPassword" placeholder="Confirm Password" required>
-        <button type="button" onclick="signupUser()">Sign up</button>
-      </form>
-    </div>
+					<button type="button" onclick="signupUser()">Sign up</button>
+				</form>
+			</div>
 
-    <div class="login">
-      <form id="loginForm">
-        <label for="chk" aria-hidden="true">Login</label>
-        <input type="text" id="usernameInput" placeholder="Username" required>
+			<div class="login">
+				<form id="loginForm">
+					<label for="chk" aria-hidden="true">Login</label>
+					 <input type="text" id="usernameInput" placeholder="Username" required>
         <input type="password" id="passwordInput" placeholder="Password" required>
         <button type="button" onclick="checkClassicLogin()">Login</button>
-        
-        <div class="social-login">
-          <p>OR</p>
-          <div class="social-buttons">
-            <button type="button" class="google-btn" onclick="signInWithGoogle()">
-              <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0z"></path><path d="M12 8v8l3-3-3-3z"></path></svg>
-              Google
-            </button>
-            <button type="button" class="phone-btn" onclick="showPhoneLogin()">
-              <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path></svg>
-              Phone
-            </button>
-          </div>
-        </div>
-      </form>
-    </div>
-
-    <!-- Phone Login Section (hidden by default) -->
-    <div id="phoneLogin" class="phone-login-container hidden">
-      <div class="phone-login-content">
-        <h3>Phone Login</h3>
-        <input type="text" id="phoneNumber" placeholder="Enter phone number (+91...)" required>
-        <div id="recaptcha-container"></div>
-        <button type="button" onclick="sendOTP()">Send OTP</button>
-        <input type="text" id="otp" placeholder="Enter OTP" class="hidden">
-        <button type="button" onclick="verifyOTP()" class="hidden">Verify OTP</button>
-        <button type="button" class="back-btn" onclick="hidePhoneLogin()">Back to Login</button>
-      </div>
-    </div>
-  </div>
+				</form>
+			</div>
+	</div>
+  
 
   <script src="./js/app.js"></script>
 </body>
