--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 .main{
 	width: 350px;
 	height: 500px;
-	background: '#ADD8E6';
+	background-color: #ADD8E6;
 	overflow: hidden;
 	border-radius: 10px;
 	box-shadow: 5px 20px 50px #000;
