--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	align-items: center;
 	min-height: 100vh;
 	font-family: 'Jost', sans-serif;
-	background: './img/travellogimg.png';
+	background: url(./img/travellogimg.png);
 }
 .main{
 	width: 350px;
@@ -38,7 +38,7 @@
 	height: 100%;
 }
 label{
-	color: #fff;
+	color: #008ae6;
 	font-size: 2.3em;
 	justify-content: center;
 	display: flex;
@@ -50,7 +50,7 @@ label{
 input{
 	width: 60%;
 	height: 10px;
-	background: #e0dede;
+	background: white;
 	justify-content: center;
 	display: flex;
 	margin: 10px auto;
@@ -66,7 +66,7 @@ button{
 	justify-content: center;
 	display: block;
 	color: #fff;
-	background: #573b8a;
+	background: #008ae6;
 	font-size: 1em;
 	font-weight: bold;
 	margin-top: 15px;
@@ -81,18 +81,18 @@ button:hover{
 }
 .login{
 	height: 460px;
-	background: #eee;
+	background: white;
 	border-radius: 60% / 10%;
 	transform: translateY(-60px);
 	transition: .8s ease-in-out;
 }
 .login label{
-	color: #573b8a;
+	color: #008ae6;
 	transform: scale(.6);
 }
 
 #chk:checked ~ .login{
-	transform: translateY(-500px);
+	transform: translateY(-455px);
 }
 #chk:checked ~ .login label{
 	transform: scale(1);	
