--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ label{
 input{
 	width: 60%;
 	height: 10px;
-	background: white;
+	background: #e0dede;
 	justify-content: center;
 	display: flex;
 	margin: 10px auto;
